# fhir-query-validator-squid-package

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  glossary.md  loop-engineering.md  public-test-servers.md  traceability.md
docs/adr/: 002-python-native-workflow-adk-wrapper.md
docs/diagrams/: squid-fhir-architecture.mmd  squid-pipeline-sequence.mmd
docs/reviews/: owasp-security-review.md
docs/spec/: README.md  cache-agent-spec.md  human-intervention-spec.md  query-execution-spec.md  query-validation-spec.md  rule-and-learner-spec.md
fhir_validator_agent/: __init__.py  agent.py
planning/: phase-0-ideation.md  phase-1-requirements-planning.md  phase-2-architecture.md  phase-3-scaffolding-core-agents.md  phase-4-loop-engineering.md  phase-5-demo-hardening-and-governance.md  phase-6-squid-migration.md
scripts/: README.md  _demo_utils.py  demo_adk_cli.py  demo_adk_web.py  demo_agent_traceability.py  demo_loops.py  demo_loops_mockhealth.py  demo_query_generator.py  demo_traceability.py
specs/: fhir-query-validator-factory.md
src/agentic_layer/: __init__.py  exceptions.py
tasks/: README.md
tasks/done/: 001-shared-entities.md  002-config-server-registry.md  003-auth-provider.md  004-shared-utils.md  005-cache-agent.md  006-capability-interpreter.md  007-query-validator.md  008-query-execution.md  009-rule-agent.md  010-search-learner.md  011-human-intervention-gate.md  012-workflow-engine.md  013-audit-trail-export.md  014-adk-root-agent.md  015-demo-scripts.md  016-integration-tests.md  017-coverage-gate.md  018-security-hardening.md  019-raise-agentic-layer-coverage.md
tests/: conftest.py
tests/integration/: README.md  conftest.py  test_cache_live.py  test_escalation_live.py  test_execution_live.py  test_full_workflow.py  test_mockhealth_live.py  test_validation_live.py
tests/regression/: conftest.py  test_escalation_regression.py  test_output_contract_regression.py  test_validation_regression.py
(+48 files in other folders)
