[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fhir-query-validator-factory"
version = "0.1.0"
description = "Spec-driven Generalized FHIR Query Validator — Squid + Grok Build implementation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Yogesh" }]
dependencies = [
    "httpx>=0.28",
    "authlib>=1.7",
    "google-adk>=2.3",
    "pydantic>=2.13",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.2",
]

[project.optional-dependencies]
adk-cli = [
    "google-agents-cli>=0.6",
]
observability = [
    "langfuse>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "ruff>=0.15",
    "bandit>=1.8",
    "pip-audit>=2.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_layer", "fhir_validator_agent"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/regression"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-ra --strict-markers"
markers = [
    "integration: live network tests against FHIR public servers (skip when offline)",
    "mockhealth: live tests requiring MOCK_HEALTH_API_KEY",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src", "."]
filterwarnings = [
    "error",
    "ignore:'_UnionGenericAlias' is deprecated:DeprecationWarning",
    "ignore:BaseAgentConfig is deprecated:DeprecationWarning",
    "ignore:SelectableGroups dict interface is deprecated:DeprecationWarning",
    "ignore::DeprecationWarning:google.adk",
    "ignore::DeprecationWarning:google.genai",
    "ignore::DeprecationWarning:opentelemetry",
]

[tool.coverage.run]
source = ["src/agentic_layer", "fhir_validator_agent"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true